[gd_scene load_steps=8 format=3 uid="uid://lh8rjkq8slr5"]

[ext_resource type="Script" uid="uid://dtk1m8pgmkjnj" path="res://mainMenu/buttoms.gd" id="1_5nlg8"]
[ext_resource type="Texture2D" uid="uid://brd8o6xqs7ysd" path="res://mainMenu/Menu/PantallaInicio (1).png" id="1_gp085"]
[ext_resource type="Texture2D" uid="uid://cdpxi0a00j4ak" path="res://mainMenu/boton_normal.tres" id="2_rrenb"]
[ext_resource type="Texture2D" uid="uid://cpwrqewpvsnjl" path="res://mainMenu/boton_presionado.tres" id="3_qbpkh"]
[ext_resource type="Texture2D" uid="uid://dc1agwhf1lnry" path="res://mainMenu/exit_normal.tres" id="5_ghbrv"]
[ext_resource type="Texture2D" uid="uid://cdhcg2g85o4qn" path="res://mainMenu/exit_press.tres" id="6_hhjth"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gkalm"]
texture = ExtResource("1_gp085")

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = 97.0
offset_right = -9.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5nlg8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -311.0
offset_top = -277.0
offset_right = 334.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxTexture_gkalm")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -257.0
offset_top = 18.0
offset_right = -209.0
offset_bottom = 34.0
scale = Vector2(2.3, 2.3)
texture_normal = ExtResource("2_rrenb")
texture_pressed = ExtResource("3_qbpkh")
texture_hover = ExtResource("3_qbpkh")

[node name="Label" type="Label" parent="TextureButton"]
layout_direction = 1
layout_mode = 1
offset_left = -3.47826
offset_top = -2.17391
offset_right = 46.5217
offset_bottom = 13.8261
theme_override_font_sizes/font_size = 11
text = "Â¿?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = 17.0
offset_right = 201.0
offset_bottom = 33.0
scale = Vector2(2.3, 2.3)
texture_normal = ExtResource("2_rrenb")
texture_pressed = ExtResource("3_qbpkh")
texture_hover = ExtResource("3_qbpkh")

[node name="Label" type="Label" parent="TextureButton2"]
layout_direction = 1
layout_mode = 0
offset_left = 2.6087
offset_top = -4.78261
offset_right = 44.6087
offset_bottom = 17.2174
theme_override_font_sizes/font_size = 10
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton3" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 18.0
offset_top = 18.0
offset_right = 66.0
offset_bottom = 34.0
scale = Vector2(2.3, 2.3)
texture_normal = ExtResource("2_rrenb")
texture_pressed = ExtResource("3_qbpkh")
texture_hover = ExtResource("3_qbpkh")

[node name="Label" type="Label" parent="TextureButton3"]
layout_direction = 1
layout_mode = 0
offset_left = 4.34783
offset_top = -0.43478
offset_right = 45.3478
offset_bottom = 13.5652
theme_override_font_sizes/font_size = 10
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton4" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -119.0
offset_top = 18.0
offset_right = -71.0
offset_bottom = 34.0
scale = Vector2(2.3, 2.3)
texture_normal = ExtResource("2_rrenb")
texture_pressed = ExtResource("3_qbpkh")
texture_hover = ExtResource("3_qbpkh")

[node name="Label" type="Label" parent="TextureButton4"]
layout_direction = 1
layout_mode = 0
offset_left = 6.95652
offset_top = -3.91304
offset_right = 42.9565
offset_bottom = 18.087
theme_override_font_sizes/font_size = 11
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton5" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -308.0
offset_top = -273.0
offset_right = -268.0
offset_bottom = -233.0
scale = Vector2(2, 2)
texture_normal = ExtResource("5_ghbrv")
texture_pressed = ExtResource("6_hhjth")
texture_hover = ExtResource("6_hhjth")

[connection signal="pressed" from="TextureButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_options_button_3_pressed"]
[connection signal="pressed" from="TextureButton4" to="." method="_on_start_button_4_pressed"]
[connection signal="pressed" from="TextureButton5" to="." method="_on_exit_button_5_pressed"]
